<resources>
    <string name="app_name">Todo</string>
    <string name="app_title">Todo: Save your important tasks.</string>
    <string name="searchText">search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_task">Add New Task</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="select_priority">Select Priority</string>
    <string name="pick_date">Pick Date</string>
    <string name="cancle">Cancle</string>
    <string name="ok">OK</string>
    <string name="update">UPDATE</string>
    <string name="title_rv">Title</string>
    <string name="date_RV">01/01/2000</string>
    <string name="search">Search</string>
    <string name="priority_color">Priority Color</string>

    <!--Priority Array List-->
    <string-array name="priority_array">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>

</resources>
