<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#232323"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="20dp"
            android:background="@android:color/white"
            android:text="@string/add_new_task"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="36sp"
            >
        </TextView>
        <EditText
            android:id="@+id/editTextAddEditTaskTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="10dp"
            android:textAlignment="textStart"
            android:background="@android:color/white"
            android:hint="@string/title"
            android:layout_gravity="start"
            android:inputType="text"
            android:autofillHints="Enter Task Title"
            tools:ignore="LabelFor" />
        <EditText
            android:id="@+id/editTextAddEditTaskDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lines="5"
            android:background="@android:color/white"
            android:padding="20dp"
            android:hint="@string/description"
            android:gravity="start"
            android:textAlignment="textStart"
            android:inputType="textAutoCorrect"
            android:importantForAutofill="no" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:background="@android:color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:text="@string/select_priority" />

            <TextView
                android:id="@+id/txtViewSetPriorityColor"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="5dp"
                android:layout_gravity="center"
                android:background="@drawable/priority_circle"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@android:color/white" />
            <Spinner
                android:id="@+id/spinnerAddEditTaskPriority"
                android:layout_width="fill_parent"
                android:layout_marginStart="80dp"
                android:layout_height="match_parent"
                android:background="@android:drawable/btn_dropdown"
                android:padding="20dp"
                android:spinnerMode="dropdown" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:background="@android:color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:text="@string/pick_date" />

            <TextView
                android:id="@+id/textViewAddEditTaskDate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/ic_menu_my_calendar"
                android:clickable="true"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginStart="120dp"
                android:padding="20dp"
                android:textAlignment="textStart"
                android:focusable="true"
                tools:ignore="TextFields" />

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="end"
            android:background="@android:color/white">
            <Button
                android:id="@+id/buttonAddEditTaskCancle"
                android:layout_width="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_height="match_parent"
                android:text="@string/cancle"
                tools:ignore="ButtonStyle">
            </Button>
            <Button
                android:id="@+id/buttonAddEditTaskOK"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ok"
                android:enabled="false"
                tools:ignore="ButtonStyle">
            </Button>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
</ScrollView>
